examples/kraken-example/public/templates/locales/US_en/errors/http_500.int
def header
  "Internal server error"
end

def description(url, err)
  "The URL"
  <code>url</code>
  "had the following error"
  <code>err</code> "."
end
